# object_detection_ros

./: CMakeLists.txt  package.xml
include/object_detection_ros/: detectornode.h  visionpipeline.h
launch/: dummy_tf.launch  object_detection.launch
msg/: Object.msg  ObjectArray.msg  arrbbox.msg  bbox.msg
src/: depth.cpp  detectornode.cpp  obj_detection_node.cpp  object_detection_node.cpp  object_handler_node.cpp  visionpipeline.cpp
